--- a/docs/Начало работы.md
+++ b/docs/Начало работы.md
@@ -61,5 +61,5 @@ func show_reward_ad():
 
 ## Примечания
 
-1. С плагином идёт демо проект, в котором можно посмотреть примеры использования методов плагина
-2. Плагин во многом повтаряет структуру JS библиотеки, можно использовать документацию для большего понимания. 
+1. С плагином идёт демо проект, в котором можно посмотреть примеры использования методов плагина.
+2. Плагин во многом повторяет структуру JS библиотеки, можно использовать документацию для большего понимания. 
